Archive2/64/463b95309b65ea/output
main.cpp: In function 'int main()':
main.cpp:16:21: error: no matching function for call to 'comma_facet::comma_facet(<brace-enclosed initializer list>)'
     comma_facet cf{1};
                     ^
main.cpp:16:21: note: candidate is:
main.cpp:5:8: note: comma_facet::comma_facet()
 struct comma_facet : std::numpunct<char> 
        ^
main.cpp:5:8: note:   candidate expects 0 arguments, 1 provided
